MOVIE BOOKING PROJECT

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
                           <li><a href="#/city">City</a></li>
                           <li><a href="#/showTimings">Show Timeings</a></li>
                           <li><a href="#/theatre">Theatre</a></li>
-                          <li><a href="#/movies">Movies</a></li>
+                          <li><a href="#/booking">Movies</a></li>
                           <li><a href="#/assign">Assingn Movies</a></li>
                         </ul>
                       </li>
